[package]
name = "nested-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.4"
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.1.2", features = ["full"] }
